--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
     position: sticky;
     top: 0;
-    z-index: 1000;
+    z-index: 1000; /* Keeps the header on top of regular content but below the modal */
 }
 
 .logo-container {
@@ -53,14 +53,24 @@ nav ul li {
 nav ul a {
     color: #fff;
     text-decoration: none;
-    padding: 5px;
+    padding: 10px;
     border-radius: 2px;
     transition: background-color 0.3s ease;
 }
 
-nav ul a:hover {
+.HeaderP {
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    transition: background-color 0.3s ease, color 0.3s ease, transform 0.3s ease;
+}
+
+.HeaderP:hover {
     background-color: #ff3232;
     color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    transform: scale(1.2); /* Increase size on hover */
 }
 
 /* Responsive Design */
@@ -72,20 +82,6 @@ nav ul a:hover {
 
 .nav-links.open {
     display: block;
-}
-
-/* Style for the HeaderP class in links */
-.HeaderP {
-    color: #fff;
-    text-decoration: none;
-    font-size: 18px;
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.HeaderP:hover {
-    background-color: #ff3232;
-    color: #fff;
-    border-radius: 5px;
 }
 
 /* Media Queries for Responsive */
@@ -104,8 +100,7 @@ nav ul a:hover {
         top: 140px;
         right: 0;
         width: 100%;
-        padding: 0; /* Remove extra padding */
-        
+        padding: 0;
     }
 
     .nav-links.open {
@@ -118,13 +113,13 @@ nav ul a:hover {
 
     nav ul {
         flex-direction: column;
-        margin: 0; /* Remove margin */
+        margin: 0;
     }
 
     nav ul li {
-        margin: 0; /* Remove margin between items */
-        padding: 10px 0; /* Add padding for spacing */
-        border-bottom: 1px solid #fff; /* Optional: Line between items */
+        margin: 0;
+        padding: 10px 0;
+        border-bottom: 1px solid #fff;
     }
 
     nav ul li:last-child {
@@ -143,7 +138,7 @@ nav ul a:hover {
 
     .nav-links {
         top: 120px;
-        padding: 0; /* Remove extra padding */
+        padding: 0;
     }
 
     nav ul li {
