--- a/src/css/messagepdf.css
+++ b/src/css/messagepdf.css
@@ -20,7 +20,7 @@
     color: #f90;
 }
 
-/* Remove padding and margin to eliminate gaps */
+/* Remove padding to eliminate gaps */
 .slick-slide {
     padding: 0;
 }
@@ -28,7 +28,6 @@
 .image-item {
     cursor: pointer;
     transition: transform 0.2s ease, filter 0.2s ease;
-    margin: 0; /* Remove the margin between images */
 }
 
 .image-item.selected {
@@ -65,14 +64,9 @@
     background-color: #e57d00;
 }
 
+/* Combine media queries */
 @media (max-width: 720px) {
     .slick-slide {
         padding: 0; /* Ensure no padding on smaller screens */
-    }
-}
-
-@media (max-width: 480px) {
-    .slick-slide {
-        padding: 0; /* Ensure no padding on the smallest screens */
     }
 }
