--- a/src/css/AboutUs.css
+++ b/src/css/AboutUs.css
@@ -20,7 +20,7 @@
 
 .about-us-content {
     max-width: 600px;
-    text-align: left;
+    text-align: justify;
 }
 
 .about-us-content h1, .about-us-content h2 {
