--- a/src/css/AboutUs.css
+++ b/src/css/AboutUs.css
@@ -37,6 +37,9 @@
     .about-us-container {
         flex-direction: column;
         padding: 10px;
+        position: absolute;
+        top: 20%;
+        left: 0;
     }
 
     .about-us-image {
