--- a/src/css/BibleQuiz.css
+++ b/src/css/BibleQuiz.css
@@ -3,6 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background: linear-gradient(135deg, rgb(253, 9, 106), #4a90e2); /* Linear gradient */
+
 }
 
 .image-gallery {
