--- a/src/css/Banner.css
+++ b/src/css/Banner.css
@@ -100,8 +100,15 @@
 @media (max-width: 1024px) {
     .banner {
         height: 400px; /* Adjust the height for tablet screens */
-    }
+     }
 
+     .slide {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 35%;
+        left: 0;
+    }
     .caption {
         font-size: 14px;
         max-height: 120px;
@@ -111,6 +118,7 @@
         width: 35px;
         height: 35px;
         font-size: 16px;
+        top: 80%;
     }
 }
 
