--- a/src/css/ImageGallery.css
+++ b/src/css/ImageGallery.css
@@ -32,16 +32,16 @@
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 20px;
-  max-width: 90%;
-  max-height: 90%;
+  max-width: 100%;
+  max-height: 100%;
   outline: none;
   z-index: 2000;
 }
 
 .modal-image {
   width: 100%;
-  height: auto;
-  max-height: 80vh;
+  height: 100%;
+  max-height: 100%;
   flex-grow: 1; /* Allow image to take available space */
 }
   
