--- a/src/css/BibleQuiz.css
+++ b/src/css/BibleQuiz.css
@@ -4,6 +4,8 @@
   align-items: center;
   justify-content: center;
   background: linear-gradient(135deg, rgb(253, 9, 106), #4a90e2); /* Linear gradient */
+  margin-top: 20%;
+
 
 }
 
