--- a/src/css/Banner.css
+++ b/src/css/Banner.css
@@ -86,8 +86,20 @@
     border: 2px solid #ffffff; /* Add a white border for contrast */
 }
 
- 
-
+.caption {
+    position: absolute;
+    bottom: 20px;  
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    text-align: center;  
+    padding: 15px;
+    font-size: 20px;  
+    max-height: 150px;
+    overflow-y: auto;
+    box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.5);
+}
+/*   */
 
 
 /* Responsive Styles */
