--- a/src/css/ImageGallery.css
+++ b/src/css/ImageGallery.css
@@ -39,8 +39,11 @@
 .modal-image {
   width: 100%;
   height: 90%;
-  object-fit: cover; /* Maintain aspect ratio while covering the container */
+  object-fit: contain; /* Ensures the full image is shown without cropping */
+  max-width: 100%; /* Adjusts for smaller screens */
+  max-height: 100vh; /* Limits height to viewport on mobile */
 }
+
 
 .modal-content {
   position: relative; /* Allow positioning of arrows relative to modal */
@@ -76,22 +79,21 @@
   right: 30px; /* Adjust position */
   background: transparent;
   border: none;
-  font-size: 2rem;
-  color: #fff;
+  font-size: 3rem;
+  color: #ff0000;
   cursor: pointer;
   z-index: 2500; /* Ensure close button is clickable and on top of everything */
 }
 
 .close-buttonimg:hover {
-  background-color: #ff6666; /* Optional hover color change */
-  border-radius: 1000px;
-}
+  background-color: #000000; /* Optional hover color change */
+ }
 
 /* Mobile view adjustments */
 @media screen and (max-width: 720px) {
   .modal {
     position: fixed;
-    top: 0;
+    top: 30%;
     left: 0;
     width: 100%;
     height: 100%;
