--- a/src/css/ImageGallery.css
+++ b/src/css/ImageGallery.css
@@ -115,8 +115,7 @@
 
   .arrow-button {
     font-size: 2.5rem; /* Smaller arrow buttons for mobile */
-    top: 10px;
-
+    bottom: 10px;
   }
 
   .close-buttonimg {
