--- a/src/css/ImageGallery.css
+++ b/src/css/ImageGallery.css
@@ -57,7 +57,7 @@
   background: transparent;
   border: none;
   font-size: 3rem;
-  color: #ffffff; /* Change as needed */
+  color: #ff0000; /* Change as needed */
   cursor: pointer;
   position: absolute; /* Position absolute for arrows */
   top: 50%; /* Center vertically */
@@ -89,49 +89,48 @@
   background-color: #000000; /* Optional hover color change */
  }
 
-/* Mobile view adjustments */
-@media screen and (max-width: 720px) {
-  .modal {
-    position: fixed;
-    top: 30%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    max-width: 100%;
-    max-height: 100%;
-    transform: none; /* Remove centering */
-  }
-
+ @media screen and (max-width: 720px) {
   .modal-content {
-    flex-direction: column; /* Stack elements vertically for mobile */
-  }
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+   }
 
   .modal-image {
     width: 100%;
-    height: auto;
-    max-height: 100vh; /* Full screen on mobile */
+    max-height: 70vh;
   }
 
   .arrow-button {
-    font-size: 2.5rem; /* Smaller arrow buttons for mobile */
-    bottom: 10px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 2.5rem;
+    color: #ffffff;
+    cursor: pointer;
+  }
+
+  .arrow-button:first-child {
+    left: 10px;
+  }
+
+  .arrow-button:last-child {
+    right: 10px;
   }
 
   .close-buttonimg {
     top: 10px;
     right: 10px;
-    font-size: 2rem; /* Adjust close button size for mobile */  
+    font-size: 2rem;
   }
-} 
+}
 
-/* For very small screens (like phones) */
 @media screen and (max-width: 480px) {
   .arrow-button {
-    font-size: 2rem; /* Even smaller arrow buttons for very small screens */
+    font-size: 2rem;
   }
 
   .close-buttonimg {
-    font-size: 1.5rem; /* Smaller close button for very small screens */
+    font-size: 1.5rem;
   }
 }
